--- a/src/AccountGoWeb/Views/Inventory/Item.cshtml
+++ b/src/AccountGoWeb/Views/Inventory/Item.cshtml
@@ -1,7 +1,12 @@
 ﻿@model Dto.Inventory.Item
-
-<div class="col-md-9">
-    <form action="~/inventory/saveitem" method="post">
+<div>
+    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
+        <i class="fa fa-edit"></i>
+        Edit
+    </a>
+</div>
+<form action="~/inventory/saveitem" method="post">
+    <div id="divItemCard" class="col-md-9">
         @Html.HiddenFor(m => m.Id)
         <div class="box">
             <div class="box-header with-border">
@@ -127,16 +132,22 @@
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-            <a class="btn btn-sm btn-default btn-flat pull-left" href="~/inventory/items">Close</a>
-        </div>
-    </form>
-</div>
-<div class="col-md-3">
-</div>
-
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <a class="btn btn-sm btn-default btn-flat pull-left" href="~/inventory/items">Close</a>
+    </div>
+</form>
 @section scripts{
+    <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
+        setFormDisabled("divItemCard");
+        function onClickEditButton() {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+            setFormEnabled("divItemCard");
+        }
     </script>
 }
