--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -1,7 +1,13 @@
 ﻿@model Dto.Purchasing.Vendor
 
-<div class="col-md-9">
-    <form action="~/purchasing/savevendor" method="post">
+<div>
+    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
+        <i class="fa fa-edit"></i>
+        Edit
+    </a>
+</div>
+<form action="~/purchasing/savevendor" method="post">
+    <div id="divVendorCard" class="col-md-9">
         @Html.HiddenFor(m => m.Id)
         <div class="box">
             <div class="box-header with-border">
@@ -170,16 +176,22 @@
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-        </div>
-    </form>
-</div>
-<div class="col-md-3">
-</div>
-
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-md-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <a href="~/purchasing/vendors" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
+    </div>
+</form>
 @section scripts{
+    <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
-
+        setFormDisabled("divVendorCard");
+        function onClickEditButton() {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+            setFormEnabled("divVendorCard");
+        }
     </script>
 }
