--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -1,9 +1,12 @@
 ﻿@model Dto.Sales.Customer
-@*<div class="col-md-12">
-        <a href="~/sales/customerallocations/@Model.Id"><i class="fa fa-tasks margin-a"></i>Allocations</a>
-    </div>*@
-<div class="col-md-9">
-    <form action="~/sales/savecustomer" method="post">
+<div>
+    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
+        <i class="fa fa-edit"></i>
+        Edit
+    </a>
+</div>
+<form action="~/sales/savecustomer" method="post">
+    <div id="divCustomerCard" class="col-md-9">
         @Html.HiddenFor(m => m.Id)
         <div class="box">
             <div class="box-header with-border">
@@ -178,14 +181,22 @@
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-        </div>
-    </form>
-</div>
-<div class="col-md-3">
-</div>
+    </div>
+    <div class="col-md-3">
+    </div>
+    <div class="col-sm-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
+        <a href="~/sales/customers" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
+    </div>
+</form>
 @section scripts{
+    <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
+        setFormDisabled("divCustomerCard");
+        function onClickEditButton() {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+            setFormEnabled("divCustomerCard");
+        }
     </script>
 }
