enable/disable forms

--- a/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Payment.cshtml
@@ -70,9 +70,10 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-            </div>
         </div>
+    </div>
+    <div class="col-md-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <a href="~/purchasing/purchaseinvoices" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
     </div>
 </form>
