--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -180,7 +180,7 @@
     <div class="col-md-3">
     </div>
     <div class="col-md-9">
-        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
         <a href="~/purchasing/vendors" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
     </div>
 </form>
