--- a/src/AccountGoWeb/Views/Administration/Company.cshtml
+++ b/src/AccountGoWeb/Views/Administration/Company.cshtml
@@ -1,7 +1,12 @@
 ﻿@model Dto.Administration.Company
-
+<div>
+    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
+        <i class="fa fa-edit"></i>
+        Edit
+    </a>
+</div>
 <form action="~/administration/company" method="post">
-    <div class="col-sm-9">
+    <div id="divCompanyCard" class="col-sm-9">
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">General</h3>
@@ -38,8 +43,20 @@
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-        </div>
+    </div>
+    <div class="col-sm-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
+        <a href="~/" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
     </div>
 </form>
+@section scripts{
+    <script src="~/js/custom.js" type="text/javascript"></script>
+    <script>
+        setFormDisabled("divCompanyCard");
+        function onClickEditButton() {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+            setFormEnabled("divCompanyCard");
+        }
+    </script>
+}
