--- a/src/AccountGoWeb/Views/Inventory/Item.cshtml
+++ b/src/AccountGoWeb/Views/Inventory/Item.cshtml
@@ -136,7 +136,7 @@
     <div class="col-md-3">
     </div>
     <div class="col-md-9">
-        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
         <a class="btn btn-sm btn-default btn-flat pull-left" href="~/inventory/items">Close</a>
     </div>
 </form>
