--- a/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
+++ b/src/AccountGoWeb/Views/Sales/AddReceipt.cshtml
@@ -1,8 +1,8 @@
 ﻿@model AccountGoWeb.Models.Sales.AddReceipt
 
-<div class="col-sm-6">
-    @Html.ValidationSummary(true)
-    <form action="~/sales/addreceipt" method="post">
+<form action="~/sales/addreceipt" method="post">
+    <div class="col-sm-6">
+        @Html.ValidationSummary(true)
         <div class="box">
             <div class="box-body">
                 <div class="row">
@@ -42,11 +42,12 @@
                 </div>
             </div>
         </div>
-        <div>
-            <input class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
-        </div>
-    </form>
-</div>
+    </div>
+    <div class="col-md-9">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left" type="submit" value="Save" />
+        <a href="~/sales/salesreceipts" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
+    </div>
+</form>
 @section scripts{
     <script>
         var customers = @Html.Raw(ViewBag.CustomersDetail);
