--- a/src/AccountGoWeb/Views/Administration/Settings.cshtml
+++ b/src/AccountGoWeb/Views/Administration/Settings.cshtml
@@ -1,15 +1,72 @@
-﻿<div class="col-sm-9">
-    <div class="box">
-        <div class="box-header with-border">
-            <h3 class="box-title">General</h3>
-            <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                    <i class="fa fa-minus"></i>
-                </button>
+﻿@model AccountGoWeb.Models.Financial.GeneralLedgerSetting
+<div>
+    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
+        <i class="fa fa-edit"></i>
+        Edit
+    </a>
+</div>
+<form method="post" action="~/administration/savesettings">
+    <div id="divGLSetup" class="col-sm-12">
+        <div class="box">
+            <div class="box-header with-border">
+                <h3 class="box-title">General Ledger Setup</h3>
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+                        <i class="fa fa-minus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="box-body">
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-3">Payable Account</div>
+                        <div class="col-sm-9">
+                            <select class="form-control" asp-for="PayableAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">Purchase Discount Account</div>
+                        <div class="col-sm-9">
+                            <select class="form-control" asp-for="PurchaseDiscountAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3">Goods Receipt Note Clearing Account</div>
+                        <div class="col-sm-9">
+                            <select class="form-control" asp-for="GoodsReceiptNoteClearingAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-4">Sales Discount Account</div>
+                        <div class="col-sm-8">
+                            <select class="form-control" asp-for="SalesDiscountAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4">Shipping Charge Account</div>
+                        <div class="col-sm-8">
+                            <select class="form-control" asp-for="ShippingChargeAccountId" asp-items="@ViewBag.Accounts"></select>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="box-body">
-            Start creating your amazing application!
-        </div>
     </div>
-</div>
+    <div class="col-sm-12">
+        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
+        <a class="btn btn-sm btn-default btn-flat pull-left" href="~/">Close</a>
+    </div>
+</form>
+@section scripts{
+    <script src="~/js/custom.js" type="text/javascript"></script>
+    <script>
+        setFormDisabled("divGLSetup");
+        function onClickEditButton() {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+            setFormEnabled("divGLSetup");
+        }
+    </script>
+}
