--- a/src/AccountGoWeb/Views/Home/Index.cshtml
+++ b/src/AccountGoWeb/Views/Home/Index.cshtml
@@ -1,14 +1,10 @@
-﻿ 
-<body>
-    <div class="row">
-        <div class="col-md-6">
-            @Html.Partial("~/Views/Dashboard/MonthlySales.cshtml")
-
-        </div>
-        <div class="col-md-6"></div>
+﻿<div class="row">
+    <div class="col-md-6">
+        @Html.Partial("~/Views/Dashboard/_MonthlySales.cshtml")
     </div>
-    <div class="row">
-        <div class="col-md-6"></div>
-        <div class="col-md-6"></div>
-    </div>
-</body>
+    <div class="col-md-6"></div>
+</div>
+<div class="row">
+    <div class="col-md-6"></div>
+    <div class="col-md-6"></div>
+</div>
