--- a/src/AccountGoWeb/Views/Account/SignIn.cshtml
+++ b/src/AccountGoWeb/Views/Account/SignIn.cshtml
@@ -47,7 +47,7 @@
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <div class="form-group has-feedback">
-                    <input asp-for="Password" class="form-control" placeholder="Laco4447">
+                    <input asp-for="Password" class="form-control" placeholder="P@ssword1">(P@ssword1)
                     <span class="glyphicon glyphicon-lock form-control-feedback"></span>
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
