--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@ desired effect
                 <div class="navbar-custom-menu">
                     <ul class="nav navbar-nav">
                         <!-- Messages: style can be found in dropdown.less-->
-                        <li class="dropdown messages-menu">
+                        @*<li class="dropdown messages-menu">
                             <!-- Menu toggle button -->
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                 <i class="fa fa-envelope-o"></i>
@@ -108,7 +108,7 @@ desired effect
                                     <a href="#">See All Messages</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li>*@
                         <!-- /.messages-menu -->
                         <!-- Notifications Menu -->
                         <li class="dropdown notifications-menu">
