--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -387,6 +387,9 @@ desired effect
                                 <li>
                                     <a href="~/administration/users">Users</a>
                                 </li>
+                                <li>
+                                    <a href="~/administration/auditlogs">Audit Logs</a>
+                                </li>
                             }
                         </ul>
                     </li>
