--- a/src/AccountGoWeb/Views/Administration/AuditLogs.cshtml
+++ b/src/AccountGoWeb/Views/Administration/AuditLogs.cshtml
@@ -12,7 +12,7 @@
     {headerName: "Record Id", field: "RecordId", width: 75},
     {headerName: "Field Name", field: "FieldName", width: 150},
     {headerName: "Original Value", field: "OriginalValue", width: 150},
-    {headerName: "New Value Value", field: "NewValue", width: 150}
+    {headerName: "New Value", field: "NewValue", width: 150}
     ];
 
     var gridOptions = {
