add username to header post for audit logging

--- a/src/AccountGoWeb/Views/Administration/AuditLogs.cshtml
+++ b/src/AccountGoWeb/Views/Administration/AuditLogs.cshtml
@@ -5,7 +5,7 @@
 </div>
 <script>
     var columnDefs = [
-    {headerName: "Username", field: "Username", width: 100},
+    {headerName: "Username", field: "UserName", width: 100},
     {headerName: "Date", field: "AuditEventDateUTC", width: 100},
     {headerName: "Type", field: "AuditEventType", width: 75},
     {headerName: "Table Name", field: "TableName", width: 150},
