--- a/src/AccountGoWeb/Views/Shared/_Layout.cshtml
+++ b/src/AccountGoWeb/Views/Shared/_Layout.cshtml
@@ -397,8 +397,8 @@ desired effect
                                     </a>
                                     <ul class="treeview-menu menu-open" style="display: block;">
                                         <li><a href="~/administration/users">Users</a></li>
-                                        <li><a href="#">Roles</a></li>
-                                        <li><a href="#">Groups</a></li>
+                                        <li><a href="~/administration/roles">Roles</a></li>
+                                        <li><a href="~/administration/groups">Groups</a></li>
                                     </ul>
                                 </li>
                                 <li>
