Accounts Recievable > Vendors -Vendor Name changed to Name -added Phone ,Contact, and GroupTax

--- a/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendors.cshtml
@@ -18,7 +18,10 @@
         {headerName: "No", field: "no", width: 50, cellRenderer: function(params) {
             return '<a href="vendor/' + params.value + '">' + params.value + '</a>';
         }},
-        {headerName: "Vendor Name", field: "name", width: 350},
+        {headerName: "Name", field: "name", width: 350},
+        {headerName: "Phone", field: "phone", widt: 100 },
+        {headerName: "Contact", field: "contact", width: 100},
+        {headerName: "TaxGroup", field : "taxGroup", width : 100},
         {headerName: "Balance", field: "balance", width: 100}
     ];
 
