latest for customer contact

--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -64,6 +64,10 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
+                <a href="~/contact/Contacts" id="linkContacts" class="btn">
+                   ...                 
+                </a>
+                @*<input id="btnContacts" class="btn btn-sm btn-default btn-flat" type="submit" value="..." />*@ 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
                         <i class="fa fa-minus"></i>
