adding new user

--- a/src/AccountGoWeb/Views/Administration/Users.cshtml
+++ b/src/AccountGoWeb/Views/Administration/Users.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Dto.Security.User>
 @using AccountGoWeb.Models;
 <div>
-    <a href="~/administration/user" class="btn inactiveLink">
+    <a href="~/administration/user" class="btn">
         <i class="fa fa-plus"></i>
         New User
     </a>
