--- a/src/AccountGoWeb/Views/Contact/Contacts.cshtml
+++ b/src/AccountGoWeb/Views/Contact/Contacts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
 <div>
-    <a href="~/contact/contact" class="btn">
+    <a href="~/contact/contact" class="btn" style="display:none;">
         <i class="fa fa-plus"></i>
         New Contact
     </a>
