--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -4,6 +4,10 @@
         <i class="fa fa-edit"></i>
         Edit
     </a>
+    <a href="~/contact/contact?id=0&customerId=@Model.Id"  class="btn">
+        <i class="fa fa-plus"></i>
+        Add Contact
+    </a>
 </div>
 <form action="~/sales/savecustomer" method="post">
     <div id="divCustomerCard" class="col-md-9">
@@ -64,7 +68,7 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
-                <a href="~/contact/Contacts" id="linkContacts" class="btn">
+                <a href="~/contact/Contacts/@Model.Id" id="linkContacts" class="btn">
                    ...                 
                 </a>
                 @*<input id="btnContacts" class="btn btn-sm btn-default btn-flat" type="submit" value="..." />*@ 
