Inventory Control > Items added Measurement and Item Tax Group in the HTML/UI

--- a/src/AccountGoWeb/Views/Inventory/Items.cshtml
+++ b/src/AccountGoWeb/Views/Inventory/Items.cshtml
@@ -20,6 +20,8 @@
     }},
     {headerName: "Code", field: "code", width: 100},
     {headerName: "Description", field: "description", width: 350},
+    {headerName: "Measurement", field: "messurement", width: 100},
+    {headerName: "Item Tax Group", field: "itemTaxGroup", width: 100},
     {headerName: "Cost", field: "cost", width: 100},
     {headerName: "Price", field: "price", width: 100},
     {headerName: "On Hand", field: "quantityOnHand", width: 100}
