--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -65,6 +65,9 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
+                <a href="~/contact/Contacts/@Model.Id" id="linkContacts" class="btn">
+                    ...
+                </a>
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
                         <i class="fa fa-minus"></i>
