Vendors page fix

--- a/src/AccountGoWeb/Views/Financials/Banks.cshtml
+++ b/src/AccountGoWeb/Views/Financials/Banks.cshtml
@@ -7,6 +7,10 @@
                 <thead>
                     <tr>
                         <th>Name</th>
+                        <th>Type</th>
+                        <th>GL Account</th>
+                        <th>Bank</th>
+                        <th>Address</th>
                         <th>Account No</th>
                     </tr>
                 </thead>
@@ -15,6 +19,10 @@
                     {
                         <tr>
                             <td>@bank.Name</td>
+                            <td></td>
+                            <td></td>
+                            <td>@bank.BankName</td>
+                            <td></td>
                             <td>@bank.AccountNo</td>
                         </tr>
                     }
