--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -65,7 +65,7 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
-                <a href="~/contact/Contacts/@Model.Id" id="linkContacts" class="btn">
+                <a href="~/contact/Contacts?partyId=@Model.Id&partyType=2" id="linkContacts" class="btn">
                     ...
                 </a>
                 <div class="box-tools pull-right">
