--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -4,7 +4,7 @@
         <i class="fa fa-edit"></i>
         Edit
     </a>
-    <a href="~/contact/contact?id=0&customerId=@Model.Id"  class="btn">
+    <a href="~/contact/contact?id=0&partyId=@Model.Id&partyType=1"  class="btn">
         <i class="fa fa-plus"></i>
         Add Contact
     </a>
@@ -68,7 +68,7 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
-                <a href="~/contact/Contacts/@Model.Id" id="linkContacts" class="btn">
+                <a href="~/contact/Contacts?partyId=@Model.Id&partyType=1" id="linkContacts" class="btn">
                    ...                 
                 </a>
                 @*<input id="btnContacts" class="btn btn-sm btn-default btn-flat" type="submit" value="..." />*@ 
