complete for Vendor and Customer Contact

--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -5,6 +5,10 @@
         <i class="fa fa-edit"></i>
         Edit
     </a>
+    <a href="~/contact/contact?id=0&partyId=@Model.Id&partyType=2" class="btn">
+        <i class="fa fa-plus"></i>
+        Add Contact
+    </a>
 </div>
 <form action="~/purchasing/savevendor" method="post">
     <div id="divVendorCard" class="col-md-9">
