--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -5,6 +5,10 @@
         <i class="fa fa-edit"></i>
         Edit
     </a>
+    <a href="~/contact/contact?id=0&partyId=@Model.Id&partyType=2" class="btn">
+        <i class="fa fa-plus"></i>
+        Add Contact
+    </a>
 </div>
 <form action="~/purchasing/savevendor" method="post">
     <div id="divVendorCard" class="col-md-9">
@@ -65,6 +69,9 @@
         <div class="box">
             <div class="box-header with-border">
                 <h3 class="box-title">Contact</h3>
+                <a href="~/contact/Contacts?partyId=@Model.Id&partyType=2" id="linkContacts" class="btn">
+                    ...
+                </a>
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
                         <i class="fa fa-minus"></i>
