Done fixing bugs in print invoice (#65)
* Added paymenttermid and reference no to Purchase Invoice and Order

* Added State and No fields

* Added Status field and checking on salesorders.cshtml if its fully invoiced it will disable the create invoice link.

* Modified Status in database and make it null. Modified status in EnumType to be used by their respective classes.

* Change Status in ClassObject nullable

* Added comparing of quantiy on salesorder and salesinvoice

* Modified code on saving salesinvoice for checking of quantity

* testing on fullyinvoice status

* Partial code for checking of salesorderline and salesinvoiceline

* Modified SaveSalesInvoice and add validation on FullyInvoiced Status on salesorder

* disable control for salesinvoice and refactor save

* Partial code on disabling buttons of salesinvoice when not yet posted.

* modified code for salesinvoice form

* Modified purchase invoice for edit rules

* Added logic for posting

* add print button on salesinvoice

* Added jspdf

* Modified template for printing salesinvoice

* Modified code for printing invoices

* modified ui of print invoice

* Modified code for printing invoice

* Modified code for printing invoice

* Modified code for print invoice

* modified code for print invoice

* modified for printing invoice

* Modified code for print invoice

* added checking on print button

* Modified code for print invoice

* Added ModelId checking

--- a/src/AccountGoWeb/Views/Sales/SalesInvoicePdf.cshtml
+++ b/src/AccountGoWeb/Views/Sales/SalesInvoicePdf.cshtml
@@ -28,24 +28,23 @@ apply the skin class to the body tag so the changes take effect.
 <script src="~/plugins/jspdf/dist/jspdf.min.js"></script>
 <script src="~/plugins/jquery/dist/jquery.js"></script>
 <script src="~/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="~/js/html2canvas.js"></script>
-
+<script src="~/plugins/html2canvas/dist/html2canvas.js"></script>
 <script>
     $(document).ready(function () {
 
         $(".formatTable tr label").each(function() {
             var numberToFormat = $(this).text();
 
-            $(this).text(accounting.formatMoney(numberToFormat));
+            $(this).text(accounting.formatNumber(numberToFormat,2));
         });
 
     });
 
 
-    function formatCurrency(e) {
-        return accounting.formatMoney(e);
+    //function formatCurrency(e) {
+    //    return accounting.formatMoney(e);
 
-    }
+    //}
 
     function fromHTML() {
         var pdf = new jsPDF('p', 'pt', 'letter');
@@ -78,7 +77,7 @@ apply the skin class to the body tag so the changes take effect.
             <div class="col-xs-12">
                 <h2 class="page-header">
                     <i class="fa fa-globe"></i> @Model.CompanyName
-                    <small class="pull-right">Date: 2/10/2014</small>
+                    <small class="pull-right">Date: @Model.InvoiceDate.ToShortDateString()</small>
                 </h2>
             </div>
         </div>
@@ -111,7 +110,7 @@ apply the skin class to the body tag so the changes take effect.
                             <th>Product</th>
                             <th>Measurement</th>
                             <th>Description</th>
-                            <th>Subtotal</th>
+                            <th>Subtotal (before tax)</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -151,18 +150,18 @@ apply the skin class to the body tag so the changes take effect.
                         <tbody>
                             <tr>
                                 <th style="width: 80%" class="text-right">Subtotal:</th>
-                                <td class="text-right"><label class="formattedCurrency">@Model.Amount</label></td>
+                                <td class="text-right"><label>@Model.Amount</label></td>
                             </tr>
                             <tr>
-                                <th style="width: 80%" class="text-right">Tax (9.3%):</th>
+                                <th style="width: 80%" class="text-right">Tax:</th>
 
-                                <td style="text-align: right"><label class="formattedCurrency">@Model.TotalTax</label></td>
+                                <td style="text-align: right"><label>@Model.TotalTax</label></td>
                             </tr>
 
                             <tr>
                                 <th style="width: 80%" class="text-right">Total:</th>
                                 <td style="text-align: right">
-                                    <label class="formattedCurrency">@Model.TotalAmountAfterTax</label>
+                                    <label>@Model.TotalAmountAfterTax</label>
                                 </td>
                             </tr>
                         </tbody>
