updated up to accounts payable (Need to recheck all the functionalities)

--- a/src/AccountGoWeb/Views/Sales/salesorders.cshtml
+++ b/src/AccountGoWeb/Views/Sales/salesorders.cshtml
@@ -34,7 +34,11 @@
         // PROPERTIES - simple boolean / string / number properties
         rowSelection: 'single',
         onSelectionChanged: onSelectionChanged,
+        enableColResize : true
     };
+
+    //gridOptions.api.sizeColumnsToFit();
+
 
     function onSelectionChanged() {
         var selectedRows = gridOptions.api.getSelectedRows();
