update for tak 138 pending is to add Closed - Order Created

--- a/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
+++ b/src/AccountGoWeb/Views/Quotations/Quotations.cshtml
@@ -16,6 +16,9 @@
 </div>
 <div>
     <div id="quotations" class="ag-fresh"></div>
+ 
+
+ 
 </div>
 <script>
     var columnDefs = [
@@ -23,7 +26,8 @@
     {headerName: "Customer Name", field: "customerName", width: 350},
     {headerName: "Date", field: "quotationDate", width: 100},
     {headerName: "Amount", field: "amount", width: 100},
-    {headerName: "Ref no", field: "referenceNo", width: 100}
+    {headerName: "Ref no", field: "referenceNo", width: 100},
+    {headerName: "Status" , field: "salesQuoteStatus", width : 100}
     ];
 
     var gridOptions = {
