--- a/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
+++ b/src/AccountGoWeb/Views/Purchasing/Vendor.cshtml
@@ -194,9 +194,16 @@
 @section scripts{
     <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
-        if (@Model.Id !== 0) {
+ 
+
+        if (@Model.Id > 0) {
             setFormDisabled("divVendorCard");
         }
+        else {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " btn inactiveLink";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
+        }
+
         function onClickEditButton() {
             document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
             document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
