--- a/src/AccountGoWeb/Views/Sales/Customer.cshtml
+++ b/src/AccountGoWeb/Views/Sales/Customer.cshtml
@@ -200,8 +200,14 @@
 @section scripts{
     <script src="~/js/custom.js" type="text/javascript"></script>
     <script>
-        if (@Model.Id !== 0) {
+ 
+
+        if (@Model.Id > 0) {
             setFormDisabled("divCustomerCard");
+        }
+        else {
+            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " btn inactiveLink";
+            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
         }
 
         function onClickEditButton() {
