--- a/src/AccountGoWeb/Views/Administration/Company.cshtml
+++ b/src/AccountGoWeb/Views/Administration/Company.cshtml
@@ -1,65 +1,92 @@
 ﻿@model Dto.Administration.Company
-<div>
-    <a href="#" id="linkEdit" class="btn" onclick="onClickEditButton();">
-        <i class="fa fa-edit"></i>
-        Edit
-    </a>
-</div>
+<style>
+  label.control-label {
+    padding-top: 10px;
+  }
+
+  input.form-control {
+    margin-bottom: 2px;
+  }
+  .btn{
+    margin-right:2px;
+  }
+</style>
+<p>
+  <div class="col-sm-9">
+    <button type="button" id="btnEdit" class="btn btn-sm btn-warning btn-flat">
+      <span class="fa fa-edit"></span> Edit
+    </button>
+  </div>
+</p>
 <form action="~/administration/company" method="post">
-    <div id="divCompanyCard" class="col-sm-9">
-        <div class="box">
-            <div class="box-header with-border">
-                <h3 class="box-title">General</h3>
-                <div class="box-tools pull-right">
-                    <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
-                        <i class="fa fa-minus"></i>
-                    </button>
-                </div>
-            </div>
-            <div class="box-body">
-                <div class="col-sm-6">
-                    <div class="row">
-                        <div class="col-sm-2">Code</div>
-                        <div class="col-sm-10">
-                            <input asp-for="CompanyCode" class="form-control" type="text" placeholder="Code ..." />
-                            <span asp-validation-for="CompanyCode" class="danger"></span>
-                        </div>
-                        @Html.HiddenFor(m => m.Id)
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2">Name</div>
-                        <div class="col-sm-10">
-                            <input asp-for="Name" class="form-control" type="text" placeholder="Name ..." />
-                            <span asp-validation-for="Name" class="danger"></span>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-2">Short Name</div>
-                        <div class="col-sm-10">
-                            <input asp-for="ShortName" class="form-control" type="text" placeholder="Short Name ..." />
-                            <span asp-validation-for="ShortName" class="danger"></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+  @Html.HiddenFor(model => model.Id)
+  <div id="divCompanyCard" class="col-sm-12">
+    <div class="box">
+      <div class="box-header with-border">
+        <h3 class="box-title">General</h3>
+        <div class="box-tools pull-right">
+          <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip" title="Collapse">
+            <i class="fa fa-minus"></i>
+          </button>
         </div>
+      </div>
+      <div class="box-body">
+        <div class="col-sm-6">
+          <div class="row">
+            <label class="control-label col-sm-4"  asp-for="CompanyCode"></label>
+            <div class="col-sm-8">
+              <input asp-for="CompanyCode" class="form-control CompanyCode" type="text" required placeholder="Code ..." />
+              <span asp-validation-for="CompanyCode" class="danger"></span>
+            </div>
+          </div>
+
+          <div class="row">
+            <label class="control-label col-sm-4" asp-for="Name" ></label>
+            <div class="col-sm-8">
+              <input asp-for="Name" class="form-control" type="text" required placeholder="Name ..." />
+              <span asp-validation-for="Name" class="danger"></span>
+            </div>
+          </div>
+          <div class="row">
+            <label class="control-label col-sm-4" asp-for="ShortName" ></label>
+            <div class="col-sm-8">
+              <input asp-for="ShortName" class="form-control" type="text" required placeholder="Short Name ..." />
+              <span asp-validation-for="ShortName" class="danger"></span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-9">
-        <input id="btnSave" class="btn btn-sm btn-primary btn-flat pull-left disabledControl" type="submit" value="Save" />
-        <a href="~/" class="btn btn-sm btn-default btn-flat pull-left">Close</a>
-    </div>
+  </div>
+  <div class="col-sm-12">
+    <button type="submit" id="btnSave" class="btn btn-sm btn-flat pull-left disabledControl">
+      <span class="fa fa-save"></span> Save
+    </button>
+
+    <a href="~/" class="btn btn-sm btn-default btn-flat pull-left">
+      <i class="fa fa-times"></i>
+      Cancel
+    </a>
+  </div>
 </form>
 @section scripts{
-    <script src="~/js/custom.js" type="text/javascript"></script>
-    <script>
-        if (@Model.Id !== 0) {
-            setFormDisabled("divCompanyCard");
-        }
-        
-        function onClickEditButton() {
-            document.getElementById("linkEdit").className = document.getElementById("linkEdit").className + " disabledControl";
-            document.getElementById("btnSave").className = "btn btn-sm btn-primary btn-flat pull-left";
-            setFormEnabled("divCompanyCard");
-        }
-    </script>
+  <script src="~/js/custom.js" type="text/javascript"></script>
+  <script>
+    $(function(){
+
+      setFormDisabled("divCompanyCard");
+
+      $("#btnEdit").on("click", function() {
+        $(this).removeClass("btn-warning").addClass("disabledControl");
+        $("#btnSave").removeClass("disabledControl").addClass("btn-primary");
+        setFormEnabled("divCompanyCard");
+        $("#CompanyCode").focus();
+      });
+
+      $("#btnSave").on("click", function() {
+        $(this).removeClass("btn-primary").addClass("disabledControl");
+        setFormDisabled("divCompanyCard");
+      });
+    })
+  </script>
 }
